[package]
name = "smol_db_client"
version = "0.1.11"
edition = "2021"
description = "A client library for smol_db"
license = "GPL-3"
license-file = "LICENSE"
repository = "https://github.com/CoryRobertson/smol_db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_db_common = { path = "../smol_db_common" }
serde = { version = "1.0.177", features = ["derive","rc"]}
serde_json = "1.0.104"
