[package]
name = "smol_db_client"
version = "1.4.0"
edition = "2021"
description = "A client library for smol_db"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["client","library","database","db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_db_common = { path = "../smol_db_common", version = "1.4.0" }
serde = { version = "1.0.177", features = ["derive","rc"]}
serde_json = "1.0.104"
tokio = { version = "1.34.0", features = ["io-util","net"]}
tracing = "0.1.40"

[features]
async = []
statistics = ["smol_db_common/statistics"]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["test-util", "full"] }
