[package]
name = "smol_db_common"
version = "1.1.1"
edition = "2021"
description = "A common library shared between packages that use smol_db"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["library","database","db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.177", features = ["derive","rc"]}
simple_logger_rs = "1.0.0"
serde_json = "1.0.104"
chrono = "0.4.26"
