[package]
name = "smol_db_common"
version = "1.3.1"
edition = "2021"
description = "A common library shared between packages that use smol_db"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["library","database","db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.177", features = ["derive","rc"]}
simple_logger_rs = "1.0.0"
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"]}
chrono-tz = { version = "0.8.3", features = ["serde"]}
rsa = { version = "0.9.3", features = ["serde"] }
rand = "0.8.5"

[features]
statistics = []
