[package]
name = "smol_db_dylib"
version = "0.1.0"
edition = "2021"
description = "An FFI client library for smol_db"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["client","library","database","db","ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_db_client = "1.3.1"

[lib]
crate-type = ["cdylib"]

