[package]
name = "smol_db_server"
version = "0.1.11"
edition = "2021"
description = "A server software to run a smol_db instance"
license = "GPL-3"
repository = "https://github.com/CoryRobertson/smol_db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_db_common = { path = "../smol_db_common", version = "1.0.0" }
serde = { version = "1.0.177", features = ["derive","rc"]}
serde_json = "1.0.104"
rand = "0.8.5"
ctrlc = "3.4.0"

[features]
logging = []
