[package]
name = "smol_db_server"
version = "1.4.0"
edition = "2021"
description = "A server software to run a smol_db instance"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["server","database","db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_db_common = { path = "../smol_db_common", version = "1.4.0" }
serde = { version = "1.0.177", features = ["derive","rc"]}
serde_json = "1.0.104"
rand = "0.8.5"
ctrlc = "3.4.1"
futures = { version = "0.3.30", features = ["io-compat", "thread-pool", "executor"] }
futures-time = "3.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18"}
tracing-tracy = { version = "0.11.0", optional = true}

[features]
statistics = ["smol_db_common/statistics"]
no-saving = []
tracing = ["dep:tracing-tracy"]

