[package]
name = "smol_db_viewer"
version = "1.3.0"
edition = "2021"
description = "A viewer and editor application for smol_db"
license = "GPL-3.0-only"
repository = "https://github.com/CoryRobertson/smol_db"
homepage = "https://github.com/CoryRobertson/smol_db"
readme = "../README.md"
keywords = ["viewer","client","database","db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", features = ["persistence"] }
log = "0.4.18"
chrono = { version = "0.4.26", features = ["serde"]}
chrono-tz = { version = "0.8.3", features = ["serde"]}
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
smol_db_client = { path = "../smol_db_client", version = "1.3.1", features = ["statistics"] }

